[gd_scene load_steps=13 format=3 uid="uid://dpqcjhfmco188"]

[ext_resource type="Script" path="res://UI/Scenes/LevelSwitcher Window.gd" id="1_pugc5"]
[ext_resource type="Texture2D" uid="uid://d2kon1qanlf7j" path="res://UI/images/GUI/MainPanel01.png" id="2_76hdr"]
[ext_resource type="FontFile" uid="uid://ciuabl015y5ch" path="res://UI/Fonts/coolvetica rg.otf" id="3_0armt"]
[ext_resource type="Texture2D" uid="uid://lvv81ehp23hk" path="res://UI/images/Level Background/Untitled.png" id="3_yedk8"]
[ext_resource type="FontFile" uid="uid://bqgpwvpac80l3" path="res://UI/Fonts/GTProeliumItalic.otf" id="5_m5isr"]

[sub_resource type="Gradient" id="Gradient_nvk18"]
offsets = PackedFloat32Array(0.316667, 0.616667, 1)
colors = PackedColorArray(1, 0.7, 0, 0.572549, 1, 0.740976, 0.136585, 0.494347, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2oa2f"]
gradient = SubResource("Gradient_nvk18")
fill = 1
fill_from = Vector2(0.5, 0.491453)
fill_to = Vector2(0.893162, 0.145299)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hf1oj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ywoh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wads6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lv17w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yufvo"]

[node name="LevelSwitcher Window" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 132.0
scale = Vector2(3.16996, 3.16996)
script = ExtResource("1_pugc5")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_76hdr")
expand_mode = 1

[node name="Name" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 104

[node name="Label" type="Label" parent="Name"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0armt")
text = "Black"
horizontal_alignment = 1

[node name="Main Image" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 38

[node name="TextureRect" type="TextureRect" parent="Main Image"]
layout_mode = 2
texture = ExtResource("3_yedk8")
expand_mode = 1

[node name="Finished Time" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.5
offset_top = -23.0
offset_right = 20.5
grow_horizontal = 2
grow_vertical = 0

[node name="BestTime" type="Label" parent="Finished Time"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_m5isr")
text = "12:75"
horizontal_alignment = 1

[node name="LockedORnot" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13, 0.13, 0.13, 0.631373)

[node name="ChooseNextLevel" type="TextureRect" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -17.0
offset_right = 15.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_2oa2f")

[node name="Button" type="Button" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_hf1oj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7ywoh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wads6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lv17w")
theme_override_styles/normal = SubResource("StyleBoxEmpty_yufvo")
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="Hovered"]
[connection signal="mouse_exited" from="." to="." method="UnHovered"]
[connection signal="mouse_entered" from="Button" to="." method="Hovered"]
[connection signal="mouse_exited" from="Button" to="." method="UnHovered"]
[connection signal="pressed" from="Button" to="." method="button_pressed"]
